@@ -1,6 +1,7 @@
 2010-04-19:
 	* (seebs) fix crash if xstat() or similar routine called with null path
 	* (seebs) fix list of client processes still running
+	* (seebs) fix pathname mismatches introduced by chroot() support
 
 2010-04-16:
 	* (seebs) add tracking of program names
